# gcc-formed

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Codex.md  EXECUTION-MODEL.md  GOVERNANCE.md  KNOWN-LIMITATIONS.md  LICENSE  NOTICE  PUBLIC-BETA-RELEASE.md  README.md  RELEASE-CHECKLIST.md  RELEASE-NOTES.md  SECURITY.md  SIGNING-KEY-OPERATIONS.md  STABLE-RELEASE.md  SUPPORT-BOUNDARY.md  SUPPORT.md  VERSIONING.md  clippy.toml  deny.toml  diagnostic-ir-v1alpha-spec.md  gcc-adapter-ingestion-spec.md  gcc-formed-architecture-proposal.md  gcc-formed-delivery-operating-model.md  gcc-formed-subject-blocks-v2-final-design-reviewed.md  gcc-formed-vnext-adr-batch-1.md  gcc-formed-vnext-change-design.md  gcc-formed-vnext-contract-docs-rewrite.md  gcc-formed_cascade_architecture_wp_brushed.md  gcc_formed_milestones_agent_playbook.md  gcc_formed_release_ready_priorities.md  implementation-bootstrap-sequence.md  packaging-runtime-operations-spec.md  quality-corpus-test-gate-spec.md  rendering-ux-contract-spec.md  rust-toolchain.toml
.codex/: QUALITY-GATE-STRENGTHENING.md  README-install.md  check_sync_requirements.py  config.toml  gate-rules.json  hooks.json  quality_gate_common.py  run_quality_gate.py
.github/: CODEOWNERS  pull_request_template.md
adr-initial-set/: README.md  adr-0001-wrapper-first-entrypoint.md  adr-0002-diagnostic-ir-as-product-core.md  adr-0003-structured-first-gcc-ingress.md  adr-0004-gcc-15-first-support-policy.md  adr-0005-gcc-13-14-compatibility-tier.md  adr-0006-fail-open-fallback-and-provenance.md  adr-0007-rust-as-implementation-language.md  adr-0008-linux-first-single-binary-musl-distribution.md  adr-0009-library-plus-cli-layering.md  adr-0010-deterministic-rule-engine-no-ai-core.md  adr-0011-locale-policy-english-first-reduced-fallback.md  adr-0012-native-ir-json-as-canonical-machine-output.md  adr-0013-sarif-egress-scope.md  adr-0014-linker-diagnostics-via-staged-text-adapter.md  adr-0015-source-ownership-model.md  adr-0016-trace-bundle-content-and-redaction.md  adr-0017-dependency-allowlist-and-license-policy.md  adr-0018-corpus-governance.md  adr-0019-render-modes.md  adr-0020-stability-promises.md  adr-0021-release-maturity-labels-and-artifact-semver-policy.md  adr-0024-public-beta-release-channel-and-github-release-policy.md  adr-0025-stable-release-automation-and-rollback-evidence.md  adr-0026-capability-profile-replaces-support-tier.md  adr-0027-processing-path-separate-from-support-level.md  adr-0028-capturebundle-only-ingest-entry.md  adr-0029-path-b-and-c-are-first-class-product-paths.md  adr-0030-theme-layout-separated-from-analysis-view-model.md  adr-0031-native-non-regression-for-tty-default.md  adr-0032-rulepack-externalization-policy.md  adr-0033-execution-model-precedes-epic-generation.md  adr-0034-presentation-v2-subject-first-blocks.md  adr-0035-gcc-9-15-public-contract-parity.md  adr-0036-presentation-v2-default-promotion-and-rollback.md  adr-0037-repair-unit-product-identity.md  adr-0038-repair-unit-default-promotion-deferred.md  adr-0039-single-agent-output-quality-release-qualification.md
ci/: README.md  gate_capture_environment.py  gate_catalog.py  gate_replay_contract.py  gate_step.py  gate_summary.py  generate_exact_count_corpus.py  interop_lab.py  major-evidence-policy.json  parity_gap_report.py  public_surface.py  readme_examples.json  release_provenance.py  run_gate_step.py  run_local_gate.py  run_pr_gate_local.sh  stable_publication.py  test_doc_authority.py  test_gate_scripts.py  test_governance_docs.py  test_human_eval_study.py  test_interop_lab.py  test_local_gate_runner.py  test_output_quality_harness.py  test_output_quality_harness_v2.py  test_parity_gap_report.py  test_public_diagnostic_export.py  test_public_export.py  test_public_surface.py  test_stable_docs.py  (+7 more)
diag_adapter_contract/: Cargo.toml
diag_adapter_contract/src/: lib.rs
diag_adapter_gcc/: Cargo.toml
diag_adapter_gcc/benches/: ingest.rs
diag_adapter_gcc/src/: canonicalize.rs  classify.rs  context.rs  evidence.rs  fallback.rs  fixits.rs  gcc_json.rs  ingest.rs  lib.rs  sarif.rs  stderr.rs
diag_capture_runtime/: Cargo.toml
diag_capture_runtime/src/: artifact.rs  artifact_builder.rs  capture.rs  lib.rs  policy.rs
diag_cli_front/: Cargo.toml
diag_cli_front/src/: args.rs  backend.rs  config.rs  error.rs  execute.rs  main.rs  mode.rs  public_json.rs  render.rs  self_check.rs  trace_bundle.rs  trace_output.rs
diag_cli_front/tests/: public_json_cli.rs  wrapper_flow.rs
diag_core/: Cargo.toml
diag_core/src/: analysis.rs  capture.rs  confidence.rs  document.rs  fingerprint.rs  lib.rs  location.rs  types.rs  validation.rs
diag_render/: Cargo.toml
diag_render/src/: budget.rs  excerpt.rs  fallback.rs  family.rs  formatter.rs  layout.rs  lib.rs  path.rs  presentation.rs  presentation_snapshot.rs  selector.rs  suggestion.rs  theme.rs  view_model.rs
diag_render/tests/: pv2_contract.rs
diag_render/tests/fixtures/pv2_contract/: custom_subject_first.presentation.json  custom_subject_first.render.default.txt  custom_subject_first_policy.toml  multi_root_compile_failure.render.ci.txt  multi_root_compile_failure.render.default.txt  multi_root_compile_failure.render.verbose.txt  multi_root_compile_failure.view.default.json
diag_residual_text/: Cargo.toml
diag_residual_text/benches/: classify.rs
diag_residual_text/src/: lib.rs
diag_rulepack/: Cargo.toml
diag_rulepack/src/: cascade.rs  lib.rs  manifest.rs  rules.rs  rules_enrich.rs  validate.rs  validate_residual.rs
diag_testkit/: Cargo.toml
diag_testkit/src/: lib.rs  snapshot.rs
diag_trace/: Cargo.toml  build.rs
diag_trace/src/: lib.rs
eval/interop/project/: CMakeLists.txt  Makefile
eval/interop/project/src/: helper.cpp  preprocess.c  response.c
xtask/: Cargo.toml
xtask/src/: main.rs  tests.rs
xtask/src/commands/: build_system_smoke.rs  check.rs  ci_gate.rs  corpus.rs  fuzz.rs  human_eval.rs  mod.rs  output_quality.rs  quality.rs  rc_gate.rs  real_project.rs  release.rs  repair_oracle.rs  stable.rs  trace_bundle.rs
xtask/src/util/: fs.rs  mod.rs  process.rs
(+2644 files in other folders)
