[workspace]
members = [
    "diag_adapter_gcc",
    "diag_backend_probe",
    "diag_capture_runtime",
    "diag_cli_front",
    "diag_core",
    "diag_enrich",
    "diag_rulepack",
    "diag_render",
    "diag_residual_text",
    "diag_testkit",
    "diag_trace",
    "xtask",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "Apache-2.0"
rust-version = "1.94"
version = "0.2.0-beta.1"

[workspace.lints.rust]
missing_docs = "allow"

[workspace.lints.clippy]
doc_markdown = "warn"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[workspace.dependencies]
assert_cmd = "2.1.1"
criterion = { version = "0.5", features = ["html_reports"] }
clap = { version = "4.5.53", features = ["derive", "env"] }
ordered-float = { version = "5.1.0", features = ["serde"] }
predicates = "3.1.3"
regex = "1.12.2"
semver = "1.0.27"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
sha2 = "0.10.9"
tempfile = "3.23.0"
thiserror = "2.0.17"
toml = "0.9.8"

[workspace.dependencies.diag_adapter_gcc]
path = "diag_adapter_gcc"

[workspace.dependencies.diag_backend_probe]
path = "diag_backend_probe"

[workspace.dependencies.diag_capture_runtime]
path = "diag_capture_runtime"

[workspace.dependencies.diag_core]
path = "diag_core"

[workspace.dependencies.diag_enrich]
path = "diag_enrich"

[workspace.dependencies.diag_rulepack]
path = "diag_rulepack"

[workspace.dependencies.diag_render]
path = "diag_render"

[workspace.dependencies.diag_residual_text]
path = "diag_residual_text"

[workspace.dependencies.diag_testkit]
path = "diag_testkit"

[workspace.dependencies.diag_trace]
path = "diag_trace"
