[package]
name = "diag_adapter_gcc"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
diag_adapter_contract.workspace = true
diag_backend_probe.workspace = true
diag_capture_runtime.workspace = true
diag_core.workspace = true
diag_rulepack.workspace = true
diag_residual_text.workspace = true
diag_trace.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
criterion.workspace = true
tempfile.workspace = true

[[bench]]
name = "ingest"
harness = false

[lints]
workspace = true
