[package]
name = "diag_capture_runtime"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
diag_backend_probe.workspace = true
diag_core.workspace = true
diag_trace.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
thiserror.workspace = true

[lints]
workspace = true
