[package]
name = "diag_residual_text"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
diag_core.workspace = true
diag_rulepack.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
