[package]
name = "diag_trace"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
diag_core.workspace = true
flate2.workspace = true
serde.workspace = true
serde_json.workspace = true
tar.workspace = true
thiserror.workspace = true

[lints]
workspace = true
