[package]
name = "xtask"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
clap.workspace = true
diag_adapter_gcc.workspace = true
diag_core.workspace = true
diag_enrich.workspace = true
diag_render.workspace = true
diag_testkit.workspace = true
serde_json.workspace = true
tempfile.workspace = true
