[package]
name = "xtask"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
clap.workspace = true
diag_adapter_gcc.workspace = true
diag_backend_probe.workspace = true
diag_cascade.workspace = true
diag_capture_runtime.workspace = true
diag_core.workspace = true
diag_enrich.workspace = true
diag_render.workspace = true
diag_residual_text.workspace = true
diag_testkit.workspace = true
diag_trace.workspace = true
ed25519-dalek = "2.1.1"
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tempfile.workspace = true

[lints]
workspace = true
